# mbta2rss

./: .gitignore  Makefile  README.md  config.mk  headmail  mbta2rss  mbta2rss.1  mbta2rss.py  md2mail  pyproject.toml  requirements.txt  result.txt  test.py
app/: __init__.py  mbtaclientwrapper.py  models.py
app/templates/: alert.html  index.html  layout.html
doc/man/: mbta2rss.1
src/: __init__.py  alerts.py  mbta-rss.py  mbta2rss.py  mbtaclientwrapper.py  mbtadash.py  models.py
src/templates/: alert.html  alerts.html
