[project]
name = "mbta-rss"
version = "0.0.1"
authors = [
  { name="Ben O'Neill", email="ben@oneill.sh" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.0",
    "flask_bootstrap>=3.3.7.1",
    "flask_security>=5.6.1",
    "flask_sqlalchemy>=2.0.40",
    "mbtaclient>=1.1.29"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/boneill02/mbta-rss"
Issues = "https://github.com/boneill02/mbta-rss/issues"
